[tool.poetry]
name = "encryptor"
version = "0.1.0"
description = ""
authors = ["pekka <peter.bruehwiler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "encryptor.main:start"
